test/modules/diten/main-module-flag/main_with_formals.good
<command line>: error: multiple 'main' procedures in module 'main_with_formals'
main_with_formals.chpl:7: note: found 'proc main' here
main_with_formals.chpl:11: note: found 'proc main' here
